--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,15 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/circleDancer.js"></script>
+    <script src="src/spinnyDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>   
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSpinnyDancer">add spinny dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCircleDancer">add circle dancer</a>     
       <a href="#" class="lineUpDancersButton">line 'em up!</a>
     </div>
 
