--- a/dancefloor.html
+++ b/dancefloor.html
@@ -9,13 +9,14 @@
     <script src="src/circleDancer.js"></script>
     <script src="src/spinnyDancer.js"></script>
   </head>
-  <body>
+  <body background="assets/market-street-bg.jpg">
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>   
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSpinnyDancer">add spinny dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCircleDancer">add circle dancer</a>     
       <a href="#" class="lineUpDancersButton">line 'em up!</a>
+
     </div>
 
     <script src="src/init.js"></script>
