--- a/dancefloor.html
+++ b/dancefloor.html
@@ -5,20 +5,20 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
-    <script src="src/blinkyDancer.js"></script>
+    <script src="src/randomDancer.js"></script>
     <script src="src/circleDancer.js"></script>
     <script src="src/spinnyDancer.js"></script>
   </head>
-  <body background="assets/market-street-bg.jpg">
-    <div class="topbar">
-      <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>   
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSpinnyDancer">add spinny dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCircleDancer">add circle dancer</a>     
-      <a href="#" class="lineUpDancersButton">line 'em up!</a>
-
+    <div class="container">
+      <div class="topbar">
+        <span class="title">object dance party</span>
+        <a href="#" class="countrifyButton">???</a>
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRandomDancer">add a random dancer</a>   
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSpinnyDancer">add spinny dancer</a>
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCircleDancer">add circle dancer</a>     
+        <a href="#" class="lineUpDancersButton">line 'em up!</a>
+      </div>
+      <script src="src/init.js"></script>
     </div>
-
-    <script src="src/init.js"></script>
   </body>
 </html>
