--- a/dancefloor.html
+++ b/dancefloor.html
@@ -9,6 +9,7 @@
     <script src="src/circleDancer.js"></script>
     <script src="src/spinnyDancer.js"></script>
   </head>
+  <body>
     <div class="container">
       <div class="topbar">
         <span class="title">object dance party</span>
@@ -20,5 +21,8 @@
       </div>
       <script src="src/init.js"></script>
     </div>
+    <audio>
+      <source class="audio-off" src="assets/SmallFriendsLoop.mp3">
+    </audio>
   </body>
 </html>
