Complete countrify effects and removal of effects

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,19 +10,18 @@
     <script src="src/spinnyDancer.js"></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container market">
       <div class="topbar">
-        <span class="title">object dance party</span>
+        <span class="title">Market Stree Hoedown</span>
         <a href="#" class="countrifyButton">???</a>
-        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeRandomDancer">add a random dancer</a>   
-        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSpinnyDancer">add spinny dancer</a>
-        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCircleDancer">add circle dancer</a>     
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSpinnyDancer">Left Shark</a>
+        <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCircleDancer">Skeleton</a>     
         <a href="#" class="lineUpDancersButton">line 'em up!</a>
       </div>
       <script src="src/init.js"></script>
     </div>
-    <audio>
-      <source class="audio-off" src="assets/SmallFriendsLoop.mp3">
+    <audio class="audio-off">
+      <source src="assets/SmallFriendsLoop.mp3">
     </audio>
   </body>
 </html>
