implementing sad face

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Object Dance Party</title>
+    <title>Let's get weird!</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
@@ -12,7 +12,7 @@
   <body>
     <div class="container market">
       <div class="topbar">
-        <span class="title">Market Stree Hoedown</span>
+        <span class="title">Market Street Hoedown</span>
         <a href="#" class="countrifyButton">???</a>
         <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSpinnyDancer">Left Shark</a>
         <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeCircleDancer">Skeleton</a>     
